--- a/addlist.html
+++ b/addlist.html
@@ -13,48 +13,68 @@
 </head>
 <body>
     <div class="mainframe">
-    <div class="max-width">
-    <div class="home-container">
-    <!--heading-->
-    <div class="head-container">
-        <div class="title-box">
-            <h1>Tasks <span>Lists</span></h1>
+        <div class="max-width">
+            <div class="home-container">
+            <!--heading-->
+            <div class="head-container">
+                <div class="title-box">
+                    <h1>Tasks <span>Lists</span></h1>
+                </div>
+                <div class="add-list-box">
+                    <a href="addlist.html"><i class="fas fa-plus-circle"></i></a>
+                    <h3>Add List</h3>
+                </div>
+            </div>
+            <!--cards-->
+            <div class="card-cointainer">
+                <a href="listview.html">
+                <div class="card">
+                    <div class="card-heading">Trip To Paris</div>
+                    <div class="completed-task">Completed Task</div>
+                    <div class="check">
+                        <input type="checkbox" name="checkbox">
+                        <label for="checkbox">Pending Task</label>
+                    </div>
+                </div></a>
+                <a href="mytodolist.html">
+                <div class="card">
+                    <div class="card-heading">My Todo List 2</div>
+                    <div class="completed-task">Completed Task</div>
+                    <div class="check">
+                        <input type="checkbox" name="checkbox">
+                        <label for="checkbox">Pending Task</label>
+                    </div>
+                </div></a>
+                <a href="mytodolist.html">
+                <div class="card">
+                    <div class="card-heading">My Todo List 3</div>
+                    <div class="completed-task">Completed Task</div>
+                    <div class="check">
+                        <input type="checkbox" name="checkbox">
+                        <label for="checkbox">Pending Task</label>
+                    </div>
+                </div></a>
+                <a href="mytodolist.html">
+                <div class="card">
+                    <div class="card-heading">My Todo List 4</div>
+                    <div class="completed-task">Completed Task</div>
+                    <div class="check">
+                        <input type="checkbox" name="checkbox">
+                        <label for="checkbox">Pending Task</label>
+                    </div>
+                </div></a>
+                <a href="mytodolist.html">
+                <div class="card">
+                    <div class="card-heading">My Todo List 5</div>
+                    <div class="completed-task">Completed Task</div>
+                    <div class="check">
+                        <input type="checkbox" name="checkbox">
+                        <label for="checkbox">Pending Task</label>
+                    </div>
+                </div></a>
+            </div>
         </div>
-        <div class="add-list-box">
-            <a href="#"><i class="fas fa-plus-circle"></i></a>
-            <h3>Add List</h3>
         </div>
-    </div>
-    <!--cards-->
-    <div class="card-cointainer">
-        <div class="card">
-            <a href="#">
-            <div class="card-heading">Trip To Paris</div>
-        </a>
-        </div>
-        <div class="card">
-            <a href="#">
-            <div class="card-heading">My Todo List 2</div>
-        </a>
-        </div>
-        <div class="card">
-            <a href="#">
-            <div class="card-heading">My Todo List 3</div>
-        </a>
-        </div>
-        <div class="card">
-            <a href="#">
-            <div class="card-heading">My Todo List 4</div>
-        </a>
-        </div>
-        <div class="card">
-            <a href="#">
-            <div class="card-heading">My Todo List 5</div>
-        </a>
-        </div>
-    </div>
-</div>
-</div>
 </div>
 <div class="popup">
     <div class="pu popup-heading">Add New List</div>
