--- a/mytodolist.html
+++ b/mytodolist.html
@@ -15,7 +15,11 @@
     <div class="list-container">
         <!--head-->
         <div class="listview"> 
+            <div class="hrbox">
+            <hr>
             <h1>My Todo List</h1>
+            <hr>
+        </div>
             <div class="back-container">
            <a href="index.html"> <i class="fas fa-arrow-circle-left"></i></a>
             <div class="back">Back</div>
@@ -29,7 +33,7 @@
                 <input type="checkbox" name="checkbox">
                 <label for="checkbox">Pending Task</label>
             </div>
-            <a href="addtodo.html"><i class="fas fa-plus-circle list-add"></i></a>
+            <a href="mytodopopup.html"><i class="fas fa-plus-circle list-add"></i></a>
     </div>
     </div>
 </body>
