--- a/addtodo.html
+++ b/addtodo.html
@@ -12,12 +12,17 @@
         <script src="https://kit.fontawesome.com/7e705f1c61.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="list-container addtodo">
+    <div class="addtodo">
+    <div class="list-container">
         <!--head-->
         <div class="listview"> 
+            <div class="hrbox">
+            <hr>
             <h1>Trip to Paris</h1>
+            <hr>
+        </div>
             <div class="back-container">
-           <a href="#"> <i class="fas fa-arrow-circle-left"></i></a>
+           <a href="index.html"> <i class="fas fa-arrow-circle-left"></i></a>
             <div class="back">Back</div>
         </div>
         </div>
@@ -29,10 +34,11 @@
                 <input type="checkbox" name="checkbox">
                 <label for="checkbox">Pending Task</label>
             </div>
-            <a href="#"><i class="fas fa-plus-circle list-add"></i></a>
+            <a href="addtodo.html"><i class="fas fa-plus-circle list-add"></i></a>
     </div>
     </div>
-    </div>
+</div>
+</div>
 <div class="popup">
     <div class="pu popup-heading">Add New Todo</div>
     <div class="pu"><input class="popup-input" type="text"></div>
