--- a/mytodopopup.html
+++ b/mytodopopup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List View</title>
+    <title>Add Todo view mobile</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
         </style>
@@ -12,12 +12,13 @@
         <script src="https://kit.fontawesome.com/7e705f1c61.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="addtodo">
     <div class="list-container">
         <!--head-->
         <div class="listview"> 
             <div class="hrbox">
             <hr>
-            <h1>Trip to Paris</h1>
+            <h1>My Todo List</h1>
             <hr>
         </div>
             <div class="back-container">
@@ -27,14 +28,21 @@
         </div>
         <div class="list-content">
         <div class="card list-card">
-            <div class="card-heading">Trip To Paris</div>
+            <div class="card-heading">My Todo List</div>
             <div class="completed-task">Completed Task</div>
             <div class="check">
                 <input type="checkbox" name="checkbox">
                 <label for="checkbox">Pending Task</label>
             </div>
-            <a href="addtodo.html"><i class="fas fa-plus-circle list-add"></i></a>
+            <a href="mytodopopup.html"><i class="fas fa-plus-circle list-add"></i></a>
     </div>
     </div>
+</div>
+</div>
+<div class="popup">
+    <div class="pu popup-heading">Add New Todo</div>
+    <div class="pu"><input class="popup-input" type="text"></div>
+    <div class="pu popup-button"><button><a href="#">ADD</a></button></div>
+</div>
 </body>
 </html>
